[B][COLOR red]Update - v1.0.4 - May 8, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added "Clear Item Bookmark".  This will only show for items
    with a bookmark and will clear just that item only.[/I]

[B][COLOR red]Update - v1.0.3 - May 6, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added "Play from Here" ability for continual episode playback.
    Progress widget can now play all episodes from
    UpNext/Progress point forward. Playlist is built and
    autoplay begins upon selection.  Also added setting
    to enable or disable new option in settings.[/I]

[B][COLOR red]Update - v1.0.2 - April 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Rescrape option showing on unplayable items.[/I]
[COLOR yellow]--[/COLOR][I] Added settings options to turn on and off context menu items.[/I]
[COLOR yellow]--[/COLOR][I] Added Auto Play and Source Select context menu options to
    be inverse of addon play method chosen.[/I]
[COLOR yellow]--[/COLOR][I] Some options did not return to homescreen on back, this is
    now fixed.[/I]