@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" version="1.0.4" name="Venom - Global Context Menu Items" provider-name="Venom">
+<addon id="context.venom" version="1.0.5" name="Venom - Global Context Menu Items" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.23.0" />
 	</requires>
@@ -8,36 +8,33 @@
 			<item library="contextSettings.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - CM Settings</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.settings),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.settings)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true)
 				</visible>
 			</item>
-
 			<item library="traktManager.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Trakt Manager</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.traktManager),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.traktManager)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,tvshow) | String.IsEqual(ListItem.dbtype,season) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="clearProviders.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Clear Providers</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.clearProviders),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.clearProviders)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="clearBookmark.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Clear Item Bookmark</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.clearBookmark),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.clearBookmark)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 <!-- 					!String.IsEqual(ListItem.Property(resumetime),0) + -->
@@ -45,81 +42,75 @@
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="rescrape.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Rescrape Item</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.rescrape),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.rescrape)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="playFromHere.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Play from here</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.playFromHere),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.playFromHere)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					String.IsEqual(ListItem.dbtype,episode)
 				</visible>
 			</item>
-
 			<item library="autoPlay.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Auto Play</label>
 				<visible>
 					String.IsEmpty(Window(home).Property(plugin.video.venom.autoPlay)) +
-					String.IsEqual(Window(home).Property(context.venom.autoPlay),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.autoPlay)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="sourceSelect.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Source Select</label>
 				<visible>
 					!String.IsEmpty(Window(home).Property(plugin.video.venom.autoPlay)) +
-					String.IsEqual(Window(home).Property(context.venom.sourceSelect),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.sourceSelect)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="findSimilar.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Find Similar</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.findSimilar),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.findSimilar)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,tvshow) | String.IsEqual(ListItem.dbtype,movie)]
 				</visible>
 			</item>
-
 			<item library="browseSeries.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Browse Series</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.browseSeries),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.browseSeries)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,tvshow)]
 				</visible>
 			</item>
-
 			<item library="browseEpisodes.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Browse Episodes</label>
 				<visible>
-					String.IsEqual(Window(home).Property(context.venom.browseEpisodes),true) +
+					!String.IsEmpty(Window(home).Property(context.venom.browseEpisodes)) +
 					String.StartsWith(ListItem.path,plugin://plugin.video.venom/) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
 					String.IsEqual(ListItem.dbtype,episode)
+<!-- 					[String.IsEqual(ListItem.dbtype,episode) | !String.IsEmpty(ListItem.Property(multi_episodes))] -->
 				</visible>
-			</item> -->
-
+			</item>
 		</menu>
-	</extension>
+</extension>
+	<extension point="xbmc.service" library="service.py" />
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Venom - This Addon is currently in beta. Please be aware there may be bugs present</summary>
 		<description lang="en">Adds Global Contextual Menu Items for Venom menu items throughout Kodi
@@ -127,17 +118,18 @@
 		<platform>all</platform>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
 		<forum></forum>
-		<website>https://github.com/123Venom/context.venom</website>
-		<source>https://github.com/123Venom/context.venom</source>
+		<website></website>
+		<source></source>
 		<disclaimer lang="en"></disclaimer>
 		<assets>
 			<icon>icon.png</icon>
 			<fanart>fanart.png</fanart>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.0.4 - May 8, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added "Clear Item Bookmark".  This will only show for items
-    with a bookmark and will clear just that item only.[/I]
+[B][COLOR red]Update - v1.0.5 - May 29, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added service for settings changes.  This now helps items
+    to change and be more responsive than before.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed issue where wrong year wascausing bookmark issues.[/I]
 		</news>
 	</extension>
 </addon>
