@@ -1,3 +1,8 @@
+[B][COLOR red]Update - v1.0.5 - May 29, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added service for settings changes.  This now helps items
+    to change and be more responsive than before.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed issue where wrong year wascausing bookmark issues.[/I]
+
 [B][COLOR red]Update - v1.0.4 - May 8, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added "Clear Item Bookmark".  This will only show for items
     with a bookmark and will clear just that item only.[/I]
